<resources>
    <string name="app_name">MadProjectNew</string>
    <string name="my_wallet_manager">My Wallet Manager!</string>
    <string name="welcome">Welcome !</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logintag">Login:</string>
    <string name="email"> Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signuptag">Signup:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="income">Income:</string>
    <string name="expense">Expense:</string>
    <string name="userid">UserID:</string>
    <string name="profile">Profile</string>
    <string name="want_to_reset_password">Want To Reset Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_income">Reset Income:</string>
    <string name="reset_income1">Reset Income</string>
    <string name="drop_expense_table">Drop Expense Table:</string>
    <string name="reset_expense">Reset Expense</string>
</resources>