<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".LoginSignupSelect">

    <ImageView
        android:id="@+id/ivicapp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/appicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/my_wallet_manager"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivicapp" />

    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginTop="176dp"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textSize="18sp"
        android:textColor="#805DBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwelcome" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:textColor="#805DBD"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />


</androidx.constraintlayout.widget.ConstraintLayout>